<resources>
    <string name="app_name">Meeting_Project</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="question">Question</string>
    <string name="agree">Agree</string>
    <string name="neutral">Neutral</string>
    <string name="disagree">Disagree</string>
    <string name="next">Next</string>

    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="logged_out">Logged out</string>
    <string name="plan_deleted">Plan deleted</string>
    <string name="plan_delete_failed">Failed to delete plan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="error_incorrect_login_fields">One or more fields are incorrect</string>
    <string name="api_base_url">https://16personalities-api-production.up.railway.app/</string>
    <string name="navigation_drawer_open">פתח תפריט</string>
    <string name="navigation_drawer_close">סגור תפריט</string>

    ## Strings for the main activity
    <string name="like">לייק</string>
    <string name="dislike">דחייה</string>
    <string name="profile_image">תמונת פרופיל</string>
    <string name="personality_logo">לוגו טיפוס אישיות</string>
    <string name="blurred_image">תמונה מטושטשת</string>

    ## Strings for the map selection activity
    <string name="select_location">Select Location</string>
    <string name="current_location">Current Location</string>
    <string name="select_on_map">Select on Map</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="cancel">Cancel</string>
</resources>